# wkendrick-libcrtxy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  readme.adoc
.devcontainer/: Dockerfile  devcontainer.json
code-workspaces/: default.code-workspace  examples.code-workspace  tests.code-workspace
dev/docs/: asciidoc.adoc  libcrtxy.adoc  pandoc.adoc
docs/: xxx
docs/html/: xxx
src/: CMakeLists.txt  crtxy-config.sh.in  crtxy.c  mathtest.c
src/examples/: CMakeLists.txt  colors.h  lines.cpp  xy.h
src/helpers/: CMakeLists.txt
src/tests/: CMakeLists.txt  drawlines.c  mathtest.c  polytest.c  rockdodge.c
